--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -134,7 +134,7 @@ body {
     padding: var(--lumo-space-wide-xl);
     padding-right: var(--lumo-space-m);
     box-sizing: border-box;
-    margin-bottom: 8px;
+    margin-bottom: 14px;
     background-color: var(--lumo-base-color);
     box-shadow: 0 0 0 1px var(--lumo-shade-5pct), 0 2px 5px 0 var(--lumo-shade-10pct);
     border-radius: var(--lumo-border-radius);
@@ -270,11 +270,7 @@ body {
 }
 
 .reviews {
-    background-color: transparent;
-}
-
-.reviews vaadin-grid-cell-content {
-    background-color: var(--lumo-contrast-5pct);
+    padding: 0 4px;
 }
 
 .reviews__no-matches {
@@ -301,24 +297,6 @@ body {
     }
 }
 
-<
-/
-style >
-< dom-module id
-
-=
-"my-dialog-styles"
-theme-for
-
-=
-"vaadin-dialog-overlay"
->
-< template >
-< style include
-
-=
-"lumo-color lumo-typography"
->
 h3 {
     margin-top: 0;
 }
